--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,18 @@
  * user guide available at https://docs.gradle.org/3.3/userguide/tutorial_java_projects.html
  */
 
-// Apply the java plugin to add support for Java
 apply plugin: 'java'
-
-// Apply the application plugin to add support for building an application
 apply plugin: 'application'
 
-// In this section you declare where to find the dependencies of your project
+
+archivesBaseName = "Drug-store"
+version = '1.0'
+applicationName = "Drug-store"
+mainClassName = 'App'
+
+
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
+
     jcenter()
 }
 
@@ -29,9 +31,16 @@ dependencies {
 	compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
   compile group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
   compile group: 'org.postgresql', name: 'postgresql', version: "9.4-1201-jdbc41"
-	
+
 }
 
-// Define the main class for the application
-mainClassName = 'App'
+defaultTasks = ['clean']
+task stage (dependsOn: ['clean', 'installApp'])
 
+
+task copyToLib(type: Copy) {
+    into "$buildDir/lib"
+    from(configurations.compile)
+}
+
+stage.dependsOn(copyToLib)
