hosting to heroku  1.changed app.java  2.changed build.gradle  3.changed .ignore file

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 }
 
 defaultTasks = ['clean']
-task stage (dependsOn: ['clean', 'installApp'])
+task stage (dependsOn: ['clean', 'installDist'])
 
 
 task copyToLib(type: Copy) {
